This is for my macOS git push or pull at Wed Jan 28 12:10:30 CST 2026. Last changed file: java/debug/java-G1GC.md